# Okolors

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: bin_release.yaml  bin_release.yml  check.yml  ci.yaml  scheduled.yml  test.yml
img/: README.md
img/CQ100/: README.md  metadata.csv
img/formats/: Jewel Changi.avif  README.md
img/unsplash/: README.md
okolors/: CHANGELOG.md  Cargo.toml  README.md
okolors-bin/: Cargo.toml
okolors-bin/src/: cli.rs  main.rs
okolors/benches/: functions.rs  images.rs
okolors/experiments/: accuracy.rs  parameters.rs
okolors/experiments/plot/: 2d.gnuplot  3d.gnuplot  plot.rs
okolors/src/: gpu.rs  internal.rs  kmeans.rs  lib.rs
okolors/src/shaders/: kmeans.wgsl  rgb_to_oklab.wgsl
okolors/util/: util.rs
scripts/: swatch.nu
src/: cli.rs  kmeans.rs  lib.rs  main.rs
