[package]
name = "okolors-bin"
version = "0.1.0"
authors = ["Ivordir <Ivordir@pm.me>"]
edition = "2021"
description = "Generates a color palette for an image by performing k-means clustering in the Oklab color space. Supports outputting the resulting colors in multiple Okhsl lightness levels."
homepage = "https://github.com/Ivordir/okolors"
repository = "https://github.com/Ivordir/okolors"
license = "MIT"
readme = "../README.md"
keywords = ["palette", "theme", "color", "oklab", "kmeans"]
categories = ["command-line-utilities", "multimedia::images"]
publish = false # Publish binary releases on Github

[[bin]]
name = "okolors"
path = "src/main.rs"

[features]
default = ["threads", "default_formats"]
default_formats = ["jpeg", "jpeg_rayon", "png", "gif", "qoi"]
threads = ["okolors/threads"]
jpeg = ["image/jpeg"]
jpeg_rayon = ["image/jpeg_rayon"]
png = ["image/png"]
gif = ["image/gif"]
qoi = ["image/qoi"]
webp = ["image/webp"]
avif = ["libavif-image"]
bmp = ["image/bmp"]
tiff = ["image/tiff"]
time = []

[dependencies]
okolors = { path = "../okolors", default_features = false }
image = { version = "0.24.6", default_features = false }
palette = { version = "0.7.1", default_features = false, features = ["std"] }
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
libavif-image = { version = "0.9.0", optional = true, default-features = false, features = ["codec-dav1d"] }
