[package]
name = "okolors-bin"
version = "0.4.0"
authors = ["Ivordir <Ivordir@pm.me>"]
edition = "2021"
description = "Create color palettes from images by performing k-means clustering in the Oklab color space."
homepage = "https://github.com/Ivordir/Okolors"
repository = "https://github.com/Ivordir/Okolors"
license = "MIT OR Apache-2.0"
publish = false # Publish binary releases on Github

[[bin]]
name = "okolors"
path = "src/main.rs"

[features]
default = ["threads", "default_formats"]
threads = ["quantette/threads", "image/jpeg_rayon", "rayon"]

# Image formats
default_formats = ["jpeg", "png", "gif", "qoi"]
jpeg = ["image/jpeg"]
png = ["image/png"]
gif = ["image/gif"]
qoi = ["image/qoi"]
webp = ["image/webp"]
avif = ["libavif-image"]
bmp = ["image/bmp"]
tiff = ["image/tiff"]

[dependencies]
quantette = { version = "0.1.0", default-features = false, features = ["kmeans", "image", "colorspaces"] }
palette = { version = "0.7.1", default-features = false }
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
image = { version = "0.24.6", default-features = false }
libavif-image = { version = "0.9.0", optional = true, default-features = false, features = ["codec-dav1d"] }
rayon = { version = "1.7.0", optional = true }
