[package]
name = "okolors-bin"
version = "0.7.0"
authors = ["Ivordir <Ivordir@pm.me>"]
edition = "2021"
description = "Create color palettes from images by performing k-means clustering in the Oklab color space."
homepage = "https://github.com/Ivordir/Okolors"
repository = "https://github.com/Ivordir/Okolors"
license = "MIT OR Apache-2.0"
publish = false # Publish binary releases on Github

[[bin]]
name = "okolors"
path = "src/main.rs"

[features]
default = ["threads"]
threads = ["okolors/threads", "rayon"]

[dependencies]
okolors = { path = "../okolors", default-features = false, features = ["_internal", "image"] }
quantette = { version = "0.2.0", default-features = false }
palette = { version = "0.7.1", default-features = false }
clap = { version = "4.0.18", features = ["derive"] }
colored = "2.0.0"
image = { version = "0.25.0", default-features = false, features = ["jpeg", "png", "gif", "webp", "qoi"] }
rayon = { version = "1.10.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["signal"] }
