[package]
name = "okolors"
version = "0.1.0"
authors = ["Ivordir <Ivordir@pm.me>"]
edition = "2021"
description = "Generates a color palette for an image by performing k-means clustering in the Oklab color space."
homepage = "https://github.com/Ivordir/okcolors"
repository = "https://github.com/Ivordir/okcolors"
license = "MIT"
readme = "../README.md"
include = ["src"]
keywords = ["palette", "theme", "color", "oklab", "kmeans"]
categories = ["multimedia::images"]

[[bench]]
name = "functions"
harness = false

[[example]]
name = "parameters"
path = "experiments/parameters.rs"

[features]
default = ["threads"]
threads = ["rayon", "hashbrown/rayon"]

[dependencies]
hashbrown = "0.13.2"
image = { version = "0.24.6", default_features = false }
palette = { version = "0.7.1", default_features = false, features = ["std"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = { version = "1.7.0", optional = true }

[dev-dependencies]
criterion = "0.4.0"
itertools = "0.10.5"
