[package]
name = "okolors"
version = "0.3.0"
authors = ["Ivordir <Ivordir@pm.me>"]
edition = "2021"
description = "Generates a color palette for an image by performing k-means clustering in the Oklab color space."
homepage = "https://github.com/Ivordir/Okolors"
repository = "https://github.com/Ivordir/Okolors"
license = "MIT"
readme = "../README.md"
include = ["src"]
keywords = ["palette", "theme", "color", "oklab", "kmeans"]
categories = ["multimedia::images"]

[[bench]]
name = "functions"
harness = false
path = "benches/functions.rs"

[[example]]
name = "parameters"
path = "experiments/parameters.rs"

[[example]]
name = "plot"
path = "experiments/plot/plot.rs"

[features]
default = ["threads"]
threads = ["rayon"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
futures-intrusive = "0.5.0"
image = { version = "0.24.6", default_features = false }
palette = { version = "0.7.1", default_features = false, features = ["std"] }
pollster = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = { version = "1.7.0", optional = true }
wgpu = "0.16.1"

[dev-dependencies]
approx = "0.5.1"
clap = { version = "4.3.0", features = ["derive"] }
criterion = "0.4.0"
itertools = "0.10.5"
palette = { version = "0.7.1", default_features = false, features = ["approx"] }
image = { version = "0.24.6", default_features = false, features = ["jpeg", "jpeg_rayon", "png", "gif", "qoi"] }
