[package]
name = "okolors"
version = "0.4.0"
authors = ["Ivordir <Ivordir@pm.me>"]
edition = "2021"
description = "Create color palettes from images by performing k-means clustering in the Oklab color space."
homepage = "https://github.com/Ivordir/Okolors"
repository = "https://github.com/Ivordir/Okolors"
license = "MIT OR Apache-2.0"
include = ["src"]
keywords = ["palette", "theme", "color", "oklab", "kmeans"]
categories = ["multimedia::images"]

[features]
default = ["threads", "image"]
threads = ["quantette/threads"]
image = ["quantette/image", "dep:image"]

# Exposes the `internal` module which currently does not follow semantic versioning.
# This is intended to be used by the Okolors CLI application.
internal = []

[dependencies]
quantette = { version = "0.1.0", default-features = false, features = ["kmeans", "colorspaces"] }
palette = { version = "0.7.3", default-features = false }
image = { version = "0.24.7", default-features = false, optional = true }
